--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cached_network_image: ^3.4.0
   timeago: ^3.7.1
   dio: ^5.9.0
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
